         memory map (patch #3476936) (Sergio).
20120121 ui/win32/{binary.c,fileselector.c,options.pl,picture.c,roms.c}: fix
         up Win32 for recent error handling changes (patch #3476971) (Sergio).
20120121 z80/coretest.c: fix up for event_add_with_data() change (thanks,
         guesser).
20120122 compat.h,compat/{unix/socket.c,win32/socket.c},
         peripherals/{nic/w5100.c,w5100_socket.c},utils.[ch]: make Win32 build
         at least compile (almost entirely guesser).
20120122 compat/{unix/socket.c,win32/socket.c},peripherals/nic/{w5100.c,
         w5100_internals.h,w5100_socket.c}: make Win32 build work (Sergio).
20120123 compat/win32/socket.c,peripherals/nic/w5100_socket.c: final tweaks to
         Win32 Spectranet code (Sergio).
20120126 hacking/spectranet.txt: add some Spectranet documentation.
20120203 sound.[ch],sound/coreaudiosound.c: remove remnants of
         sound_stereo_beeper, stereo is now determined exclusively by AY
         configuration (Fred).
20120204 sound.c,sound/coreaudiosound.c: fix the removal of sound_stereo_beeper
         (Fred).
20120211 hacking/Makefile.am: add missing backslash and files (Fred).
20120212 Makefile.am,configure.in,display.[ch],fuse.c,machine.c,man/fuse.1,
         menu.[ch],menu_data.dat,movie.[ch],movie_tables.h,rzx.c,
         screenshot.[ch],settings.dat,sound.c,timer/timer.c,ui.c,
         ui/gtk/gtkui.c,ui/{options.dat,ui.h},ui/widget/widget.c,
         ui/win32/win32ui.c: add recording of movies to fmf files 
         (patch #3034770) (Gergely Szasz with contributions from Sergio Baldoví
         and Fred).
20120214 ui/gtk/gtkmouse.c: prefer to include gtk.h (patch #3481334) (rkd77).
20120214 ui/gtk/{binary.c,browse.c,confirm.c,debugger.c,gtkdisplay.c,
         gtkinternals.h,gtkjoystick.c,gtkui.c,memory.c,options.pl,picture.c,
         pokefinder.c,pokemem.c,rollback.c,roms.c,stock.c}: remove use of
         deprecated GTK_SIGNAL_FUNC and GtkSignalFunc (patch #3481335) (rkd77).